--- a/apps/design-system/project.json
+++ b/apps/design-system/project.json
@@ -68,8 +68,7 @@
       "executor": "@nx/angular:dev-server",
       "options": {
         "port": 4222,
-        "publicHost": "http://localhost:4222",
-        "proxyConfig": "proxy.conf.json"
+        "publicHost": "http://localhost:4222"
       },
       "configurations": {
         "production": {
